deploy/kubernetes/pma.yaml
apiVersion: v1
kind: Service
metadata:
  name: pma
  labels:
    app: pma
spec:
  ports:
  - port: 80
  selector:
    app: pma
  type: NodePort
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: pma
  labels:
    app: pma
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pma
    spec:
      containers:
      - image: phpmyadmin/phpmyadmin
        name: pma
        ports:
        - containerPort: 80
          name: pma
