deploy/kubernetes/com-stouffcapital-pma-ing-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-pma
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - pma.stouffcapital.com
    secretName: pma-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: pma.stouffcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pma
          servicePort: 80
