deploy/kubernetes/tech-stouffcapital-pma-ing-ssl.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-pma
  namespace: utilities
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - pma.stouffcapital.tech
    secretName: pma-stouffcapital-service-tls
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
  - host: pma.stouffcapital.tech
    http:
      paths:
      - path: /
        backend:
          serviceName: pma
          servicePort: 80
